[package]
name = "neurogrim-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "LSP Brains core scoring engine — pure logic, zero I/O"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
url = { version = "2", features = ["serde"] }
# E-B2-2 C3: calibration-ledger writer uses anyhow::Context for
# I/O-error chaining (open / append / parse). Same convention as
# neurogrim-sensory's existing supply-chain-decision-ledger writer.
anyhow = { workspace = true }
# E-B2-2 C3: calibration-ledger reader logs malformed-line skip
# events via tracing::warn — same posture as the supply-chain
# ledger reader (parse-failure on a bad line should never block
# the sensor, but the operator should see the warning).
tracing = { workspace = true }
# v3.5.0 ports module — random pick from IANA dynamic range with
# deterministic-seeded test path. 0.8.x for SeedableRng::from_entropy.
rand = { workspace = true }
# v4.1 S13-B-1 — `queue` module's `QueueMessage::id` is a uuid v4.
# Same crate version as neurogrim-cli's run_id generators for
# consistency. Serde feature for `#[derive(Serialize, Deserialize)]`.
uuid = { version = "1", features = ["v4", "serde"] }
# v4.1 S13-B-3 — opt-in SQLite backend for `ack_required: true`
# topics. Feature-gated so callers that only need the JSONL fan-out
# path don't pay the rusqlite compile-time + binary cost.
# `bundled` matches the discipline in `neurogrim-a2a/token_store.rs`
# (no system libsqlite3 dependency).
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = []
# Pulls in the SqliteBackend from `queue_backend.rs`. Enabled by
# default in neurogrim-cli + neurogrim-dashboard so the operator-
# facing surfaces always have it.
sqlite = ["dep:rusqlite"]

[dev-dependencies]
proptest = { workspace = true }
# E-B2-2 C3: tempfile-backed integration tests for the
# calibration-ledger writer (atomic write + read roundtrip,
# malformed-line skip, fold-reconstruct). Same posture as
# `neurogrim-sensory` already uses for its ledger tests.
tempfile = "3"
