[package]
name = "neurogrim-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "LSP Brains core scoring engine — pure logic, zero I/O"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
url = { version = "2", features = ["serde"] }
# E-B2-2 C3: calibration-ledger writer uses anyhow::Context for
# I/O-error chaining (open / append / parse). Same convention as
# neurogrim-sensory's existing supply-chain-decision-ledger writer.
anyhow = { workspace = true }
# E-B2-2 C3: calibration-ledger reader logs malformed-line skip
# events via tracing::warn — same posture as the supply-chain
# ledger reader (parse-failure on a bad line should never block
# the sensor, but the operator should see the warning).
tracing = { workspace = true }
# V5-MOD-1 (2026-05-02) — `async fn` in `pub trait ScoringSource`
# requires the `async_trait` macro at this Rust version (workspace
# MSRV 1.75; RPITIT is available but the workspace convention is
# `#[async_trait]` per neurogrim-a2a's Transport trait, including
# proven Box<dyn> dispatch). Promoted to workspace.dependencies in
# Phase 0 so neurogrim-core can reference it via workspace = true.
async-trait = { workspace = true }
# V5-MOD-1 Phase 5 (2026-05-02) — promoted from dev-dep to
# runtime because `scoring_source_conformance` uses
# `tokio::spawn` + `tokio::time::timeout` in its public API
# (the conformance suite that third-party ScoringSource impls
# call to verify they honor the contract).
tokio = { workspace = true }
# v3.5.0 ports module — random pick from IANA dynamic range with
# deterministic-seeded test path. 0.8.x for SeedableRng::from_entropy.
rand = { workspace = true }
# v4.1 S13-B-1 — `queue` module's `QueueMessage::id` is a uuid v4.
# Same crate version as neurogrim-cli's run_id generators for
# consistency. Serde feature for `#[derive(Serialize, Deserialize)]`.
uuid = { version = "1", features = ["v4", "serde"] }
# v4.1 S13-B-3 — opt-in SQLite backend for `ack_required: true`
# topics. Feature-gated so callers that only need the JSONL fan-out
# path don't pay the rusqlite compile-time + binary cost.
# `bundled` matches the discipline in `neurogrim-a2a/token_store.rs`
# (no system libsqlite3 dependency).
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = []
# Pulls in the SqliteBackend from `queue_backend.rs`. Enabled by
# default in neurogrim-cli + neurogrim-dashboard so the operator-
# facing surfaces always have it.
sqlite = ["dep:rusqlite"]

[dev-dependencies]
proptest = { workspace = true }
# V5-MOD-1 Phase 1 (2026-05-02) — `#[tokio::test]` for the
# `Box<dyn ScoringSource>` async-dispatch validation in
# `scoring_source::tests`. Phase 2 + Phase 5 (conformance suite)
# rely on this too. Note: tokio also appears in [dependencies]
# above (Phase 5 promotion) — `cargo` correctly merges; this
# dev-dep entry is harmless redundancy that documents the
# test-only origin of the inclusion.
# E-B2-2 C3: tempfile-backed integration tests for the
# calibration-ledger writer (atomic write + read roundtrip,
# malformed-line skip, fold-reconstruct). Same posture as
# `neurogrim-sensory` already uses for its ledger tests.
tempfile = "3"
