[package]
name = "neurogrim-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "LSP Brains core scoring engine — pure logic, zero I/O"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
url = { version = "2", features = ["serde"] }
# E-B2-2 C3: calibration-ledger writer uses anyhow::Context for
# I/O-error chaining (open / append / parse). Same convention as
# neurogrim-sensory's existing supply-chain-decision-ledger writer.
anyhow = { workspace = true }
# E-B2-2 C3: calibration-ledger reader logs malformed-line skip
# events via tracing::warn — same posture as the supply-chain
# ledger reader (parse-failure on a bad line should never block
# the sensor, but the operator should see the warning).
tracing = { workspace = true }
# V5-MOD-1 (2026-05-02) — `async fn` in `pub trait ScoringSource`
# requires the `async_trait` macro at this Rust version (workspace
# MSRV 1.75; RPITIT is available but the workspace convention is
# `#[async_trait]` per neurogrim-a2a's Transport trait, including
# proven Box<dyn> dispatch). Promoted to workspace.dependencies in
# Phase 0 so neurogrim-core can reference it via workspace = true.
async-trait = { workspace = true }
# V5-MOD-1 Phase 5 (2026-05-02) — promoted from dev-dep to
# runtime because `scoring_source_conformance` uses
# `tokio::spawn` + `tokio::time::timeout` in its public API
# (the conformance suite that third-party ScoringSource impls
# call to verify they honor the contract).
#
# V5-SDK-2 partial Phase 1 (2026-05-03) — gated behind the
# `conformance` feature so consumers that don't use the
# conformance suite don't pay tokio's compile + binary cost.
# Test-time `#[tokio::test]` capability is restored via the
# `[dev-dependencies]` entry below; the runtime `tokio::spawn`
# + `tokio::time::timeout` reach through `dep:tokio` is only
# active when `--features conformance` is on.
tokio = { workspace = true, optional = true }
# v3.5.0 ports module — random pick from IANA dynamic range with
# deterministic-seeded test path. 0.8.x for SeedableRng::from_entropy.
rand = { workspace = true }
# v4.1 S13-B-1 — `queue` module's `QueueMessage::id` is a uuid v4.
# Same crate version as neurogrim-cli's run_id generators for
# consistency. Serde feature for `#[derive(Serialize, Deserialize)]`.
uuid = { version = "1", features = ["v4", "serde"] }
# v4.1 S13-B-3 — opt-in SQLite backend for `ack_required: true`
# topics. Feature-gated so callers that only need the JSONL fan-out
# path don't pay the rusqlite compile-time + binary cost.
# `bundled` matches the discipline in `neurogrim-a2a/token_store.rs`
# (no system libsqlite3 dependency).
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = []
# Pulls in the SqliteBackend from `queue_backend.rs`. Enabled by
# default in neurogrim-cli + neurogrim-dashboard so the operator-
# facing surfaces always have it.
sqlite = ["dep:rusqlite"]
# V5-SDK-2 partial Phase 1 (2026-05-03) — gates the four
# conformance modules (`scoring_source_conformance`,
# `sensor_conformance`, `queue_backend_conformance`, and the
# shared `conformance` types module) behind a feature so
# production consumers that don't run the conformance suite
# don't carry tokio transitively. Activates `dep:tokio` for
# the runtime `tokio::spawn` + `tokio::time::timeout` calls
# inside the suite. Workspace consumers (sensory, ecosystem,
# 4 example crates, neurogrim-sdk's own integration test) opt
# in via `[dev-dependencies] features = ["conformance"]` so
# the workspace test build activates the gate while
# `cargo build --workspace` stays feature-clean.
conformance = ["dep:tokio"]

[dev-dependencies]
proptest = { workspace = true }
# V5-MOD-1 Phase 1 (2026-05-02) — `#[tokio::test]` for the
# `Box<dyn ScoringSource>` async-dispatch validation in
# `scoring_source::tests`. Phase 2 + Phase 5 (conformance suite)
# rely on this too.
#
# V5-SDK-2 partial Phase 1 (2026-05-03) — restored explicitly to
# `[dev-dependencies]` because the runtime `tokio` was moved to
# `optional = true` in `[dependencies]` above. Without this entry,
# `#[tokio::test]` modules in `scoring_source.rs::tests` and the
# three `*_conformance.rs::tests` modules fail to compile under
# `cargo build -p neurogrim-core --tests --no-default-features`.
# Cargo merges this with the optional runtime entry; under
# `--no-default-features --tests`, only this dev-dep is active
# (gives the macros + multi-threaded runtime test infrastructure).
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# E-B2-2 C3: tempfile-backed integration tests for the
# calibration-ledger writer (atomic write + read roundtrip,
# malformed-line skip, fold-reconstruct). Same posture as
# `neurogrim-sensory` already uses for its ledger tests.
tempfile = "3"
