[package]
name = "neurogrim-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "NeuroGrim v3.4 dashboard — HTTP server + embedded React UI for human-readable Brain inspection"

# v3.4 Phase 0.2 — included files for crates.io packaging.
# `frontend/dist/` is committed and shipped so users can `cargo install`
# without needing Node.js. The frontend SOURCE is excluded from the
# tarball (contributors building from git get it; published-crate users
# don't need it).
include = [
    "src/**/*",
    "bindings/**/*.ts",
    "frontend/dist/**/*",
    "Cargo.toml",
    "README.md",
]
exclude = [
    "frontend/node_modules/**/*",
    "frontend/src/**/*",
    "frontend/public/**/*",
    "frontend/*.json",
    "frontend/*.ts",
    "frontend/*.js",
    "frontend/*.cjs",
    "frontend/*.mjs",
    "frontend/.gitignore",
    "frontend/index.html",
]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# v3.4 dashboard runtime deps
axum = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
notify = { workspace = true }

# Internal deps
neurogrim-core = { workspace = true }
neurogrim-mcp = { workspace = true }

# ts-rs generates TypeScript bindings from #[derive(TS)] structs.
# Generation happens via `cargo test` (the bindings/ directory is the
# canonical artifact, committed to git and consumed by the frontend).
ts-rs = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
