[package]
name = "neurogrim-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "NeuroGrim v3.4 dashboard — HTTP server + embedded React UI for human-readable Brain inspection"

# v3.4 Phase 0.2 — included files for crates.io packaging.
# `frontend/dist/` is committed and shipped so users can `cargo install`
# without needing Node.js. The frontend SOURCE is excluded from the
# tarball (contributors building from git get it; published-crate users
# don't need it).
include = [
    "src/**/*",
    "bindings/**/*.ts",
    "frontend/dist/**/*",
    "Cargo.toml",
    "README.md",
]
exclude = [
    "frontend/node_modules/**/*",
    "frontend/src/**/*",
    "frontend/public/**/*",
    "frontend/*.json",
    "frontend/*.ts",
    "frontend/*.js",
    "frontend/*.cjs",
    "frontend/*.mjs",
    "frontend/.gitignore",
    "frontend/index.html",
]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# v3.4 dashboard runtime deps
axum = { workspace = true }
# v4.2 S14-S-4.5 v2 — HTTPS server binding for the secret-
# management endpoints. axum-server provides the
# `bind_rustls(addr, RustlsConfig)` entrypoint that integrates
# rustls with axum's `make_service` API. `tls-rustls` feature
# pulls in the rustls runtime; `tokio-rustls` is the bridge
# axum-server uses internally.
axum-server = { version = "0.7", features = ["tls-rustls"] }
# v4.2 S14-S-4.5 v2 — direct rustls dep so we can install the
# `ring` crypto provider at process startup. rustls 0.23 made
# crypto-provider selection explicit; without this we hit a
# panic on first HTTPS handshake. `ring` is the smaller of the
# two bundled providers (vs aws-lc-rs).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tower-http = { workspace = true }
rust-embed = { workspace = true }
notify = { workspace = true }
# Phase 2.1: SSE bridge from `tokio::sync::broadcast::Receiver` into
# axum's `Sse` response. The `sync` feature enables BroadcastStream.
tokio-stream = { version = "0.1", features = ["sync"] }
# `futures::Stream` trait + adapters (StreamExt::map). Used by the
# SSE handler to convert broadcast events into `axum::sse::Event`.
futures = "0.3"
# v4.3 S15-C-4 — SHA-256 for registry-editor ETag computation.
# Same crate already used by neurogrim-secrets + neurogrim-sensory.
sha2 = "0.10"

# Internal deps
neurogrim-core = { workspace = true, features = ["sqlite"] }
neurogrim-mcp = { workspace = true }
# v4.2 S14-S-4.5 v2 — secrets crate provides TLS cert generation
# (consumed by tests of the HTTPS-binding path; the production
# path reads cert.pem + key.pem on disk via `RustlsConfig::
# from_pem_file` so neurogrim-secrets isn't strictly required at
# runtime, but it's the canonical place for cert-generation logic
# and the test that wires v1 → v2 pulls it in).
neurogrim-secrets = { workspace = true }
# Phase 1.3 — Agent Card discovery for federation peer probes.
# Reuses the same TaskClient the CLI's `a2a-discover` uses, so the
# dashboard inherits any future protocol fixes for free.
neurogrim-a2a = { workspace = true }

# ts-rs generates TypeScript bindings from #[derive(TS)] structs.
# Generation happens via `cargo test` (the bindings/ directory is the
# canonical artifact, committed to git and consumed by the frontend).
ts-rs = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
