[package]
name = "neurogrim-ecosystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Fractal composition dispatch — invokes child Brains via subprocess or A2A (spec §9 + §13)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
neurogrim-core = { workspace = true }
neurogrim-a2a = { workspace = true }

[dev-dependencies]
tempfile = "3"
axum = "0.7"
# `default-features = false` + `rustls-tls-native-roots` — keep the
# dev-dep in lock-step with the runtime TLS choice in neurogrim-a2a.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
