[package]
name = "neurogrim-ecosystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Fractal composition dispatch — invokes child Brains via subprocess or A2A (spec §9 + §13)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
# V5-MOD-1 (2026-05-02) — `A2aSource` impl of `neurogrim_core::
# scoring_source::ScoringSource` needs `#[async_trait]` for the
# `async fn load(...)` method. Promoted to workspace.dependencies
# in V5-MOD-1 Phase 0.
async-trait = { workspace = true }
neurogrim-core = { workspace = true }
neurogrim-a2a = { workspace = true }

[dev-dependencies]
tempfile = "3"
axum = "0.7"
# `default-features = false` + `rustls-tls-native-roots` — keep the
# dev-dep in lock-step with the runtime TLS choice in neurogrim-a2a.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
# V5-SDK-2 partial Phase 3 (2026-05-04) — `src/scoring_source.rs:241`
# (inside `#[tokio::test] async fn a2a_factory_passes_full_conformance_suite`)
# imports `neurogrim_core::scoring_source_conformance::run_factory_conformance`,
# which is now feature-gated. Activate at test-build time only via
# `[dev-dependencies]` so production `cargo build -p neurogrim-ecosystem`
# stays tokio-clean.
neurogrim-core = { workspace = true, features = ["conformance"] }
