[package]
name = "neurogrim-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "MCP client + server integration for NeuroGrim"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
# v3.2.1 — colored is needed by the prose renderer (agent --prose +
# MCP `orient` tool). Color is a presentation concern, but the
# renderer is shared across CLI and MCP so the dep lives here.
colored = { workspace = true }
# v3.4 Phase 0.1 — needed by the relocated `BrainContext::load`
# (was in neurogrim-cli). The dashboard server (neurogrim-dashboard)
# and the CLI both call into context here, so the dep moves to mcp.
url = { workspace = true }
neurogrim-core = { workspace = true }
neurogrim-sensory = { workspace = true }
neurogrim-ecosystem = { workspace = true }
# v4.0 S12-G-3 — `publish_gates` module parses
# `<brain>/.claude/brain/publish-gates.yaml` and validates it against
# the embedded `publish-gates-v1.schema.json` Draft-07 schema. Same
# pattern + same crate version as `neurogrim-sensory::trust_budget`.
serde_yaml = { workspace = true }
jsonschema = "0.17"

[dev-dependencies]
tempfile = "3"
