[package]
name = "neurogrim-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "MCP client + server integration for NeuroGrim"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
# v3.2.1 — colored is needed by the prose renderer (agent --prose +
# MCP `orient` tool). Color is a presentation concern, but the
# renderer is shared across CLI and MCP so the dep lives here.
colored = { workspace = true }
# v3.4 Phase 0.1 — needed by the relocated `BrainContext::load`
# (was in neurogrim-cli). The dashboard server (neurogrim-dashboard)
# and the CLI both call into context here, so the dep moves to mcp.
url = { workspace = true }
neurogrim-core = { workspace = true, features = ["sqlite"] }
# V5-MOD-2 Phase 4 (2026-05-02) — `neurogrim-sensory` previously
# listed here was an UNUSED dep (verified via
# `grep -rn neurogrim_sensory:: neurogrim-mcp/src/` — zero source
# imports; the dep only appeared in Cargo.toml). Dropped to (a)
# avoid the V5-MOD-2 binary-level pass-through having a phantom
# branch and (b) reduce neurogrim-mcp's transitive deps. mcp does
# NOT use any sensor analyzers; its public surface is the
# BrainServer scoring tools (get_health_score / get_trajectory /
# etc.), which depend only on neurogrim-core.
neurogrim-ecosystem = { workspace = true }
# v4.2 S14-S-5 — secret_fetch MCP tool wraps the secrets backend.
neurogrim-secrets = { workspace = true }
# v4.0 S12-G-3 — `publish_gates` module parses
# `<brain>/.claude/brain/publish-gates.yaml` and validates it against
# the embedded `publish-gates-v1.schema.json` Draft-07 schema. Same
# pattern + same crate version as `neurogrim-sensory::trust_budget`.
serde_yaml = { workspace = true }
jsonschema = "0.17"
# v4.1 S13-B-5 — autonomy module's approval requests carry a
# uuid v4 action_id. Same crate version as neurogrim-cli +
# neurogrim-core for consistency.
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
