[package]
name = "neurogrim-sdk"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Stable contract surface for NeuroGrim plugin authors. Re-exports the V5-MOD-1/2/3 trait + factory + registry types + conformance suites + core types."
keywords = ["neurogrim", "sdk", "plugin", "lsp-brains"]
categories = ["development-tools"]
# V5-SDK-1 plan-critic 🔴 fix (2026-05-02): publish=false explicitly so
# `cargo publish` is mechanically blocked until the operator approves
# crates.io publication separately. Prevents accidental publication
# during V5-SDK-1's 0.x soak period (≥6 weeks per V5-SDK epic).
# Flip to `true` (or remove) when publication is approved.
publish = false

[lib]
# Pure re-export crate. The compile-test files under tests/ verify
# every re-exported type's path resolves through `neurogrim_sdk`.

[dependencies]
neurogrim-core = { workspace = true }
neurogrim-a2a = { workspace = true }
neurogrim-secrets = { workspace = true }

[dev-dependencies]
# V5-SDK-1 Phase 4 (2026-05-03) — `tests/sdk_surface_assertion.rs`
# pins every re-exported trait method's signature. The pinning
# functions reach for support types (e.g., `ScoringSourceConfig`,
# `SecretKey`, `url::Url`) from the source crates directly because
# the SDK is intentionally a contract crate (not impl crate); these
# types aren't part of the SDK surface but ARE needed to type-check
# the trait methods that ARE on the SDK surface.
#
# These dev-deps do NOT leak to consumers — `[dev-dependencies]` is
# strictly internal-test scope. The SDK's published surface remains
# `neurogrim-core` + `neurogrim-a2a` + `neurogrim-secrets`.
neurogrim-core = { workspace = true }
neurogrim-a2a = { workspace = true }
neurogrim-secrets = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
